src/objects/Core_Device_Package_Program__c.object
<CustomObject>
    <fields>
        <fullName>Core_Device_Package__c</fullName>
        <label>Core Device Package</label>
        <referenceTo>Core_Device_Package__c</referenceTo>
        <relationshipLabel>Core Device Package Programs</relationshipLabel>
        <relationshipName>Core_Device_Package_Programs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipName>Program_Core_Devices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source_Id__c</fullName>
        <label>Source Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <label>Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Source_Id__c , Source_Name__c )</formula>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <label>Core Device Package Program</label>
    <nameField>
        <displayFormat>CDP-{0000000000}</displayFormat>
        <label>Core Device Program Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Core Device Package Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>